<resources>
    <string name="app_name">Kuad</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="login">Login</string>
    <string name="app_des">Welcome to Kuad. Let\'s catch a bottle from someone and read their message.</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_des">Want to join us ?</string>
    <string name="register_title">Register</string>
    <string name="first_name">First name</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name">Last name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="email">Email</string>
    <string name="email_hint">Email</string>
    <string name="confirm">Confirm</string>
    <string name="password">Password</string>
    <string name="catch_a_bottle">Catch\nA\nBottle</string>
    <string name="my_bottle">My Bottle</string>
    <string name="my_bottles_title">My Bottles</string>
    <string name="following_bottles">Following Bottles</string>
    <string name="history_bottles">History Bottles</string>
</resources>
